# modbus-gui

./: .gitignore  BUILD_GUIDE.md  BUILD_WINDOWS.md  CROSS_PLATFORM.md  INSTALL_RUST_SCANNER.md  README.md  __main__.py  auto_search_worker.py  build_linux.sh  build_windows.ps1  config_manager.py  connection_tab.py  constants.py  debug_connection.py  debug_rust_connection.py  firmware_display.py  gui_environment.py  modbus_gui_main.py  modbus_gui_main.spec  modbus_gui_main_old.py  modbus_gui_main_simplified.spec  modbus_gui_settings.json  modbus_gui_wizard.spec  modbus_scanner_wrapper.py  modbus_worker.py  requirements.txt  run.sh  test_com_connection.py  test_controller.py  test_gui_level.py  test_rust_scanner.py  test_ttyusb0.py
.github/workflows/: build.yml
core/: device_response_parser_fixed.py  modbus_connection.py  modbus_device_info.py  modbus_registers.py  modbus_rtu_client.py
modbus_scanner_rust/: Cargo.toml  README.md  pyproject.toml
modbus_scanner_rust/src/: lib.rs
wizard/: __init__.py  config_worker.py  connection_monitor.py  step_config.py  step_connect.py  step_welcome.py  test_window.py  test_worker.py  usb_monitor.py  wizard_main.py
wizard/components/: __init__.py  connection_status.py  log_viewer.py
